--- a/css/main.css
+++ b/css/main.css
@@ -87,10 +87,16 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.content-wrapper {
+  width: 90%;
+  margin: 50px 0;
+}
+
 /* BASE HEADER &&&& FOOTER STYLES */
 header {
   display: flex;
   justify-content: center;
+  margin: 15px 0;
 }
 
 header .content-wrapper {
@@ -98,11 +104,23 @@ header .content-wrapper {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 0;
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
+  width: 60%;
+}
+
+header nav {
+  width: 60%;
+}
+
+.header-divider {
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
 }
 
 footer {
@@ -110,6 +128,14 @@ footer {
   flex-direction: column;
   align-items: center;
   text-align: center;
+}
+
+footer .content-wrapper {
+  width: 55%;
+}
+
+footer .contact {
+  margin-bottom: 50px;
 }
 
 footer .social-icons {
@@ -124,6 +150,16 @@ footer .social-icons p {
   justify-content: center;
   align-items: center;
 }
+
+footer p {
+  margin: 0;
+}
+
+footer .copyright {
+  margin: 20px 0;
+}
+
+/* =====MOBILE STYLES===== */
 
 /* HERO AREA */
 
@@ -146,18 +182,41 @@ aside {
   justify-content: center;
 }
 
-.features .feature-items {
+.features h2 {
+  margin-bottom: 60px;
+}
+
+.features .features-items {
   display: flex;
   justify-content: center;
   align-items: flex-start;
   flex-flow: row wrap;
 }
 
+.features article {
+  width: 63%;
+  margin: 30px 0;
+}
+
+.features p {
+  margin: 0;
+}
+
+
 /* REVIEWS SECTION */
 
 .reviews {
   display: flex;
   justify-content: center;
+}
+
+.reviews h2 {
+  margin-bottom: 40px;
+}
+
+.reviews h3 {
+  width: 55%;
+  margin: 20px 0;
 }
 
 /* ABOUT PAGE */
@@ -170,6 +229,10 @@ aside {
 .contact-section {
   display: flex;
   justify-content: center;
+}
+
+.contact-content p {
+  margin: 0;
 }
 
 /* FAQ PAGE */
@@ -186,6 +249,13 @@ aside {
   flex-flow: row wrap;
 }
 
+.faq h2 {
+  margin-bottom: 40px;
+}
+
+.faq-area {
+  margin-bottom: 50px;
+}
 
 
 
