--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,61 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/* General Styles */
+
+html {
+  font-size: 1rem;
+  color: #e2e3ed;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
+}
+
+ul,
+ol {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+a {
+  color: #e2e3ed;
+  text-decoration: none;
+}
+
+h1 {
+  font-size: 36px;
+  line-height: 43px;
+  font-weight: 500;
+}
+
+h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 30px;
+  font-weight: 500;
+}
+
+h3,
+h4 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+p {
+  font-size: 14px;
+  line-height: 18px;
+}
+
+img {}
+
+figure {}
+
+address {
+  font-style: normal;
+}
+
 .content-wrapper {
   width: 90%;
   margin: 50px 0;
@@ -97,6 +152,7 @@ header {
   display: flex;
   justify-content: center;
   margin: 15px 0;
+  background: #202322;
 }
 
 header .content-wrapper {
@@ -110,7 +166,7 @@ header .content-wrapper {
 header nav ul {
   display: flex;
   justify-content: space-around;
-  width: 60%;
+  width: 100%;
 }
 
 header nav {
@@ -121,6 +177,7 @@ header nav {
   width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
+  color: #3a3a3a;
 }
 
 footer {
@@ -128,6 +185,7 @@ footer {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  background: #202322;
 }
 
 footer .content-wrapper {
@@ -140,9 +198,8 @@ footer .contact {
 
 footer .social-icons {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  flex-direction: column;
 }
 
 footer .social-icons p {
@@ -173,6 +230,7 @@ footer .copyright {
 aside {
   display: flex;
   justify-content: center;
+  background: #527158;
 }
 
 /* FEATURES SECTION */
@@ -180,6 +238,7 @@ aside {
 .features {
   display: flex;
   justify-content: center;
+  background: #2a423a;
 }
 
 .features h2 {
@@ -191,6 +250,8 @@ aside {
   justify-content: center;
   align-items: flex-start;
   flex-flow: row wrap;
+  font-size: 60px;
+  background: #2a423a;
 }
 
 .features article {
@@ -208,10 +269,12 @@ aside {
 .reviews {
   display: flex;
   justify-content: center;
+  background: #2a423a;
 }
 
 .reviews h2 {
   margin-bottom: 40px;
+  line-height: 30px;
 }
 
 .reviews h3 {
@@ -224,22 +287,32 @@ aside {
 .mission {
   display: flex;
   justify-content: center;
+  background: #527158;
 }
 
 .contact-section {
   display: flex;
   justify-content: center;
+  background: #2a423a;
 }
 
 .contact-content p {
   margin: 0;
 }
 
+/* Social */
+.social-icons {
+  font-size: 21px;
+  background: #527158;
+}
+
+
 /* FAQ PAGE */
 
 .faq {
   display: flex;
   justify-content: center;
+  background: #527158;
 }
 
 .faq .content-wrapper {
@@ -247,14 +320,20 @@ aside {
   justify-content: center;
   align-items: flex-start;
   flex-flow: row wrap;
+  margin: 50px 0 0 0;
 }
 
 .faq h2 {
   margin-bottom: 40px;
+  line-height: 30px;
 }
 
 .faq-area {
   margin-bottom: 50px;
+}
+
+.faq-area h4 {
+  line-height: 24px;
 }
 
 /* ===== MEDIA BREAKPOINTS FOR TABLET ===== */
@@ -263,6 +342,21 @@ aside {
 
   /*Tablet styles here*/
   /* General styles */
+  h1 {
+    font-size: 48px;
+    line-height: 48px;
+  }
+
+  h2 {
+    font-size: 36px;
+    line-height: 48px;
+  }
+
+  h3 {
+    font-size: 24px;
+    line-height: 30px;
+  }
+
   .content-wrapper {
     max-width: 640px;
     margin: 100px 0;
@@ -271,7 +365,6 @@ aside {
   /* Header */
 
   header {
-    width: 80%;
     padding: 33px 0;
   }
 
@@ -286,11 +379,11 @@ aside {
 
   header nav ul {
     justify-content: space-between;
-
   }
 
   .header-divider {
     display: none;
+
   }
 
   /* Hero Area */
@@ -320,7 +413,7 @@ aside {
   }
 
   .features .features-item-description {
-    width: 50%;
+    width: 62%;
   }
 
   /* Reviews */
@@ -338,12 +431,16 @@ aside {
   .mission-content {
     display: flex;
     justify-content: space-between;
-    align-items: flex start;
-    padding-top: 20%;
+    align-items: flex-start;
+    padding-top: 20px;
   }
 
   .mission-content p {
     width: 45%;
+  }
+
+  .contact h4 {
+    font-size: 24px;
   }
 
   .contact-section .content-wrapper h2 {
@@ -361,7 +458,7 @@ aside {
     justify-content: space-between;
   }
 
-  .faq-content {
+  .faq-area {
     flex-basis: 45%;
   }
 
@@ -369,7 +466,25 @@ aside {
     width: 100%;
   }
 
+  .faq h4 {
+    font-size: 14px;
+    line-height: 15.75px;
+  }
+
+  .faq p {
+    font-size: 14px;
+    line-height: 15.75px;
+  }
+
   /* Footer */
+  footer h4 {
+    font-size: 24px;
+  }
+
+  footer p {
+    line-height: 18px;
+  }
+
   footer .content-wrapper {
     width: 65%;
   }
@@ -394,8 +509,86 @@ aside {
 @media only screen and (min-width: 1200px) {
 
   /*Desktop styles here*/
-  .features {
-    width: 85%;
+  h1 {
+    font-size: 60px;
+  }
+
+  h2 {
+    font-size: 30px;
+  }
+
+  h3 {
+    font-size: 30px;
+  }
+
+  h4 {
+    font-size: 30px;
+  }
+
+  p {
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  .content-wrapper {
+    max-width: 960px;
+  }
+
+  /* Header */
+  header {
+    padding: 15px 0;
+  }
+
+  /* Hero Area */
+  .hero-area h1 {
+    width: 80%;
+  }
+
+  /* Aside */
+  aside .content-wrapper {
+    justify-content: space-around;
+  }
+
+  aside .content-wrapper .form-description,
+  aside .content-wrapper .form {
+    width: 30%;
+  }
+
+  /* Features */
+  .features h2 {
+    width: 90%;
+  }
+
+  .features article {
+    flex-basis: 33%;
+  }
+
+
+  /* Reviews */
+  .reviews article div {
+    width: 42%;
+  }
+
+  /* ABOUT SECTION */
+  .mission h2,
+  .contact-section,
+  .content-wrapper h2 {
+    width: 95%;
+  }
+
+  .mission h2 {
+    font-size: 48px;
+  }
+
+  /* FAQ SECTION */
+  .faq h2 {
+    width: 100%;
+    font-size: 48px;
+  }
+
+  .faq h4 p {
+    font-size: 18px;
+    line-height: 18px;
   }
 }
 
