--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,7 @@ ol {
 a {
   color: #e2e3ed;
   text-decoration: none;
+
 }
 
 h1 {
@@ -134,9 +135,13 @@ p {
   line-height: 18px;
 }
 
-img {}
+img {
+  width: 100%;
+}
 
-figure {}
+figure {
+  margin: 0;
+}
 
 address {
   font-style: normal;
@@ -151,8 +156,8 @@ address {
 header {
   display: flex;
   justify-content: center;
-  margin: 15px 0;
   background: #202322;
+  padding: 15px 0;
 }
 
 header .content-wrapper {
@@ -167,17 +172,30 @@ header nav ul {
   display: flex;
   justify-content: space-around;
   width: 100%;
+  list-style: none;
 }
 
 header nav {
-  width: 60%;
+  width: 50%;
+  text-transform: uppercase;
+  font-size: 1.125em;
+  font-weight: 700;
+  padding-right: 70px;
 }
+
+header nav ul li {
+  font-size: 1.125em;
+}
+
 
 .header-divider {
   width: 100%;
   height: 1px;
-  margin: 10px 0 20px 0;
   color: #3a3a3a;
+}
+
+header figure {
+  width: 60%;
 }
 
 footer {
@@ -223,7 +241,23 @@ footer .copyright {
 .hero-area {
   display: flex;
   justify-content: center;
+  background: url('../../unplugged-design-docs/unplugged-design-docs/unplugged-retreat.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 500px;
 }
+
+.hero-area h1 {
+  font-size: 36px;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  margin: 0;
+  padding-top: 30px;
+  padding-bottom: 50px;
+  line-height: 43px;
+}
+
 
 /* ASIDE SECTION */
 
@@ -234,11 +268,14 @@ aside {
 }
 
 /* FEATURES SECTION */
-
 .features {
   display: flex;
   justify-content: center;
-  background: #2a423a;
+  background-color: #2a423a;
+  background-image: url('../img/unplugged-retreat-features.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .features h2 {
@@ -251,8 +288,8 @@ aside {
   align-items: flex-start;
   flex-flow: row wrap;
   font-size: 60px;
-  background: #2a423a;
 }
+
 
 .features article {
   width: 63%;
@@ -278,8 +315,16 @@ aside {
 }
 
 .reviews h3 {
-  width: 55%;
-  margin: 20px 0;
+  width: 80%;
+  margin: 0;
+}
+
+.reviews img {
+  width: 335px;
+}
+
+.reviews article div {
+  padding-top: 20px;
 }
 
 /* ABOUT PAGE */
@@ -336,6 +381,33 @@ aside {
   line-height: 24px;
 }
 
+/* INPUT FORM */
+aside .form {
+  margin-top: 30px;
+}
+
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
+}
+
 /* ===== MEDIA BREAKPOINTS FOR TABLET ===== */
 
 @media only screen and (min-width: 768px) {
@@ -381,12 +453,26 @@ aside {
     justify-content: space-between;
   }
 
+  header figure {
+    width: 30%;
+  }
+
   .header-divider {
     display: none;
 
   }
 
   /* Hero Area */
+  .hero-area {
+    min-height: 600px;
+    padding-bottom: 100px;
+  }
+
+  .hero-area h1 {
+    font-size: 48px;
+    line-height: 48px;
+    margin: 0;
+  }
 
   /* Aside */
   aside .content-wrapper {
@@ -540,8 +626,14 @@ aside {
   }
 
   /* Hero Area */
+  .hero-area {
+    min-height: 550px;
+  }
+
   .hero-area h1 {
     width: 80%;
+    font-size: 60px;
+    line-height: 60px;
   }
 
   /* Aside */
@@ -573,7 +665,7 @@ aside {
   .mission h2,
   .contact-section,
   .content-wrapper h2 {
-    width: 95%;
+    width: 100%;
   }
 
   .mission h2 {
