--- a/css/main.css
+++ b/css/main.css
@@ -328,6 +328,21 @@ aside {
 }
 
 /* ABOUT PAGE */
+.map figure {
+    width: 100%;
+    height: 0; 
+    padding-bottom: 125%; 
+    overflow: hidden;
+    position: relative;
+}
+ 
+.map iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+}
 
 .mission {
   display: flex;
