--- a/css/main.css
+++ b/css/main.css
@@ -329,19 +329,19 @@ aside {
 
 /* ABOUT PAGE */
 .map figure {
-    width: 100%;
-    height: 0; 
-    padding-bottom: 125%; 
-    overflow: hidden;
-    position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 125%;
+  overflow: hidden;
+  position: relative;
 }
- 
+
 .map iframe {
-    width: 100%;
-    height: 100%;
-    position: absolute; 
-    top: 0; 
-    left: 0; 
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .mission {
@@ -529,6 +529,11 @@ input[type=button] {
   }
 
   /* About Section */
+
+  .map figure {
+    max-height: 350px;
+  }
+
   .mission-content {
     display: flex;
     justify-content: space-between;
@@ -677,6 +682,10 @@ input[type=button] {
   }
 
   /* ABOUT SECTION */
+  .map figure {
+    padding-bottom: 45.5%;
+  }
+
   .mission h2,
   .contact-section,
   .content-wrapper h2 {
